pnas draft submission

--- a/pnas/pnas-new.cls
+++ b/pnas/pnas-new.cls
@@ -115,7 +115,7 @@
 \RequirePackage{graphicx,xcolor}
 \RequirePackage{colortbl}
 \RequirePackage{booktabs}
-\RequirePackage{algorithm}
+\RequirePackage{algorithm2e}
 \RequirePackage[noend]{algpseudocode}
 \RequirePackage{changepage}
 \RequirePackage[twoside,%
