--- a/pnas/pnas-sample.bib
+++ b/pnas/pnas-sample.bib
@@ -5,25 +5,441 @@
   pages={929--936},
   year={2002}
 }
-
-@article{berard1994embedding,
-  title={Embedding Riemannian manifolds by their heat kernel},
-  author={B{\'e}rard, Pierre and Besson, G{\'e}rard and Gallot, Sylvain},
-  journal={Geometric \& Functional Analysis GAFA},
-  volume={4},
-  number={4},
-  pages={373--398},
-  year={1994},
-  publisher={Springer}
+@article{Flood1958,
+author = {Merrill M. Flood},
+title = {Some Experimental Games},
+journal = {Management Science},
+volume = {5},
+number = {1},
+pages = {5-26},
+year = {1958},
+doi = {10.1287/mnsc.5.1.5},
+URL = { https://doi.org/10.1287/mnsc.5.1.5},
+eprint = {https://doi.org/10.1287/mnsc.5.1.5}
+}
+@article{Axelrod1981,
+    author = {Axelrod, Robert and Hamilton, William D.},
+    title = {The evolution of cooperation},
+    volume = {211},
+    number = {4489},
+    pages = {1390--1396},
+    year = {1981},
+    doi = {10.1126/science.7466396},
+    publisher = {American Association for the Advancement of Science},
+    issn = {0036-8075},
+    URL = {http://science.sciencemag.org/content/211/4489/1390},
+    eprint = {http://science.sciencemag.org/content/211/4489/1390.full.pdf},
+    journal = {Science}
+}
+@article{Axelrod1980a,
+    ISSN = {00220027, 15528766},
+    URL = {http://www.jstor.org/stable/173932},
+    author = {Axelrod, Robert},
+    journal = {The Journal of Conflict Resolution},
+    number = {1},
+    pages = {3-25},
+    publisher = {Sage Publications, Inc.},
+    title = {Effective Choice in the Prisoner's Dilemma},
+    volume = {24},
+    year = {1980}
+}
+@article{Axelrod1980b,
+    ISSN = {00220027, 15528766},
+    URL = {http://www.jstor.org/stable/173638},
+    author = {Axelrod, Robert},
+    journal = {The Journal of Conflict Resolution},
+    number = {3},
+    pages = {379-403},
+    publisher = {Sage Publications, Inc.},
+    title = {More Effective Choice in the Prisoner's Dilemma},
+    volume = {24},
+    year = {1980}
+}
+@article{Nowak1989,
+    title={Game-dynamical aspects of the prisoner's dilemma},
+    author={Nowak, Martin and Sigmund, Karl},
+    journal={Applied Mathematics and Computation},
+    volume={30},
+    number={3},
+    pages={191--213},
+    year={1989},
+    publisher={Elsevier}
+}
+@article{Nowak1990,
+    title={The evolution of stochastic strategies in the prisoner's dilemma},
+    author={Nowak, Martin and Sigmund, Karl},
+    journal={Acta Applicandae Mathematicae},
+    volume={20},
+    number={3},
+    pages={247--265},
+    year={1990},
+    publisher={Springer}
+}
+@article{Nowak1993,
+  title={A strategy of win-stay, lose-shift that outperforms tit-for-tat in the Prisoner's Dilemma game},
+  author={Nowak, Martin and Sigmund, Karl},
+  journal={Nature},
+  volume={364},
+  number={6432},
+  pages={56},
+  year={1993},
+  publisher={Nature Publishing Group}
+}
+@article{Stewart2012,
+    author = {Stewart, Alexander J. and Plotkin, Joshua B.},
+    title = {Extortion and cooperation in the Prisoner’s Dilemma},
+    volume = {109},
+    number = {26},
+    pages = {10134-10135},
+    year = {2012},
+    doi = {10.1073/pnas.1208087109},
+    URL = {http://www.pnas.org/content/109/26/10134.short},
+    eprint = {http://www.pnas.org/content/109/26/10134.full.pdf},
+    journal = {Proceedings of the National Academy of Sciences}
+}
+@article{Press2012,
+    author = {Press, William H. and Dyson, Freeman J.},
+    title = {Iterated Prisoner’s Dilemma contains strategies that dominate any 
+    evolutionary opponent},
+    volume = {109},
+    number = {26},
+    pages = {10409-10413},
+    year = {2012},
+    doi = {10.1073/pnas.1206569109},
+    URL = {http://www.pnas.org/content/109/26/10409.abstract},
+    eprint = {http://www.pnas.org/content/109/26/10409.full.pdf},
+    journal = {Proceedings of the National Academy of Sciences}
 }
 
-@article{coifman2005geometric,
-  title={Geometric diffusions as a tool for harmonic analysis and structure definition of data: Diffusion maps},
-  author={Coifman, Ronald R and Lafon, Stephane and Lee, Ann B and Maggioni, Mauro and Nadler, Boaz and Warner, Frederick and Zucker, Steven W},
-  journal={Proceedings of the National Academy of Sciences of the United States of America},
-  volume={102},
-  number={21},
-  pages={7426--7431},
-  year={2005},
+@article{Harper2015,
+    author = {Lee, Christopher and Harper, Marc and Fryer, Dashiell},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {The Art of War: Beyond Memory-one Strategies in Population Games},
+    year = {2015},
+    month = {03},
+    volume = {10},
+    url = {https://doi.org/10.1371/journal.pone.0120625},
+    pages = {1-16}, 
+    number = {3},
+    doi = {10.1371/journal.pone.0120625}
+}
+@article{Knight2018,
+    author = {Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E. and Campbell, Owen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Evolution reinforces cooperation with the emergence of self-recognition mechanisms: An empirical study of strategies in the Moran process for the iterated prisoner’s dilemma},
+    year = {2018},
+    month = {10},
+    volume = {13},
+    url = {https://doi.org/10.1371/journal.pone.0204981},
+    pages = {1-33},
+    number = {10},
+    doi = {10.1371/journal.pone.0204981}
+}
+@article{adami2013,
+  title={Evolutionary instability of zero-determinant strategies demonstrates that winning is not everything},
+  author={Adami, Christoph and Hintze, Arend},
+  journal={Nature communications},
+  volume={4},
+  pages={2193},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+@article{Hilbe2015,
+title = "Partners or rivals? Strategies for the iterated prisoner's dilemma",
+journal = "Games and Economic Behavior",
+volume = "92",
+pages = "41 - 52",
+year = "2015",
+issn = "0899-8256",
+doi = "https://doi.org/10.1016/j.geb.2015.05.005",
+url = "http://www.sciencedirect.com/science/article/pii/S0899825615000822",
+author = "Hilbe, Christian and Traulsen, Arne and Sigmund, Karl",
+}
+@article{Hilbe2013b,
+  title={Evolution of extortion in iterated prisoner’s dilemma games},
+  author={Hilbe, Christian and Nowak, Martin and Sigmund, Karl},
+  journal={Proceedings of the National Academy of Sciences},
+  pages={201214834},
+  year={2013},
   publisher={National Acad Sciences}
+}
+@article{Hilbe2013,
+    author = {Hilbe, Christian and Nowak, Martin and Traulsen, Arne},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Adaptive Dynamics of Extortion and Compliance},
+    year = {2013},
+    month = {11},
+    volume = {8},
+    url = {https://doi.org/10.1371/journal.pone.0077886},
+    pages = {1-9},
+    number = {11},
+    doi = {10.1371/journal.pone.0077886}
+}
+@book{kepner2011,
+  title={Graph algorithms in the language of linear algebra},
+  author={Kepner, Jeremy and Gilbert, John},
+  year={2011},
+  publisher={SIAM}
+}
+@misc{axelrodproject,
+  author       = {{ {The Axelrod project developers} }},
+  title        = {Axelrod: 4.4.0},
+  month        = apr,
+  year         = 2016,
+  doi          = {10.5281/zenodo.1476181},
+  url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
+}
+@article{Knight2016,
+archivePrefix = {arXiv},
+arxivId = {1604.00896},
+author = {Knight, Vincent and Campbell, Owen and Harper, Marc and Langner, Karol and Campbell, James and Campbell, Thomas and Carney, Alex and Chorley, Martin and Davidson-Pilon, Cameron and Glass, Kristian and Ehrlich, Tom{\'{a}}{\v{s}} and Jones, Martin and Koutsovoulos, Georgios and Tibble, Holly and Jochen, M{\"{u}}ller and Palmer, Geraint and Slavin, Paul and Standen, Timothy and Visintini, Luis and Molden, Karl},
+eprint = {1604.00896},
+file = {::},
+number = {1},
+title = {{An open reproducible framework for the study of the iterated prisoner's dilemma}},
+url = {http://arxiv.org/abs/1604.00896},
+volume = {1},
+year = {2016}
+}
+@book{Tadelis2013,
+  title={Game theory: an introduction},
+  author={Tadelis, Steve},
+  year={2013},
+  publisher={Princeton University Press}
+}
+@article{Hongyan2014,
+author = {Cai, Hongyan and Wang, Yanfei and Yi, Tao},
+title = {An approach for minimizing a quadratically constrained fractional 
+quadratic problem with application to the communications over wireless channels
+},
+journal = {Optimization Methods and Software},
+volume = {29},
+number = {2},
+pages = {310-320},
+year = {2014},
+doi = {10.1080/10556788.2012.711330},
+URL = {http://dx.doi.org/10.1080/10556788.2012.711330},
+eprint = {http://dx.doi.org/10.1080/10556788.2012.711330}
+}
+@article{Beck2009,
+author="Beck, Amir
+and Teboulle, Marc",
+title="A convex optimization approach for minimizing the ratio of indefinite 
+quadratic functions over an ellipsoid",
+journal="Mathematical Programming",
+year="2009",
+volume="118",
+number="1",
+pages="13--35",
+issn="1436-4646",
+doi="10.1007/s10107-007-0181-x",
+url="http://dx.doi.org/10.1007/s10107-007-0181-x"
+}
+@book{bertsekas2014,
+  title={Constrained optimization and Lagrange multiplier methods},
+  author={Bertsekas, Dimitri P},
+  year={2014},
+  publisher={Academic press}
+}
+@article{Giorgi2016,
+ author = {Giorgi, Giorgio and Jim{\'e}nez, Bienvenido and Novo, Vicente},
+ title = {Approximate Karush---Kuhn---Tucker Condition in Multiobjective Optimization},
+ journal = {J. Optim. Theory Appl.},
+ issue_date = {October   2016},
+ volume = {171},
+ number = {1},
+ month = oct,
+ year = {2016},
+ issn = {0022-3239},
+ pages = {70--89},
+ numpages = {20},
+ url = {http://dx.doi.org/10.1007/s10957-016-0986-y},
+ doi = {10.1007/s10957-016-0986-y},
+ acmid = {3001290},
+ publisher = {Plenum Press},
+ address = {New York, NY, USA},
+}
+@article{Jonsson2005,
+  title={Accurate solution of polynomial equations using Macaulay resultant matrices},
+  author={Jonsson, Gubjorn and Vavasis, Stephen},
+  journal={Mathematics of computation},
+  volume={74},
+  number={249},
+  pages={221--262},
+  year={2005}
+}
+@InProceedings{Mokus1978,
+author="Mo{\v{c}}kus, J.",
+title="On bayesian methods for seeking the extremum",
+booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk, July 1--7, 1974",
+year="1975",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="400--404",
+isbn="978-3-540-37497-8"
+}
+@article{Jones2001,
+  title={A taxonomy of global optimization methods based on response surfaces},
+  author={Jones, Donald R},
+  journal={Journal of global optimization},
+  volume={21},
+  number={4},
+  pages={345--383},
+  year={2001},
+  publisher={Springer}
+}
+@article{Storn1997,
+  title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
+  author={Storn, Rainer and Price, Kenneth},
+  journal={Journal of global optimization},
+  volume={11},
+  number={4},
+  pages={341--359},
+  year={1997},
+  publisher={Springer}
+}
+@article{Harper2017,
+    author = {Harper, Marc and Knight, Vincent and Jones, Martin and Koutsovoulos, Georgios and Glynatsi, Nikoleta E. and Campbell, Owen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
+    year = {2017},
+    month = {12},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0188046},
+    pages = {1-33},
+    number = {12},
+    doi = {10.1371/journal.pone.0188046}
+}
+@misc{tim_head_2018_1207017,
+  author       = {Tim Head and
+                  MechCoder and
+                  Gilles Louppe and
+                  Iaroslav Shcherbatyi and
+                  fcharras and
+                  Zé Vinícius and
+                  cmmalone and
+                  Christopher Schröder and
+                  nel215 and
+                  Nuno Campos and
+                  Todd Young and
+                  Stefano Cereda and
+                  Thomas Fan and
+                  rene-rex and
+                  Kejia (KJ) Shi and
+                  Justus Schwabedal and
+                  carlosdanielcsantos and
+                  Hvass-Labs and
+                  Mikhail Pak and
+                  SoManyUsernamesTaken and
+                  Fred Callaway and
+                  Loïc Estève and
+                  Lilian Besson and
+                  Mehdi Cherti and
+                  Karlson Pfannschmidt and
+                  Fabian Linzberger and
+                  Christophe Cauet and
+                  Anna Gut and
+                  Andreas Mueller and
+                  Alexander Fabisch},
+  title        = {scikit-optimize/scikit-optimize: v0.5.2},
+  month        = mar,
+  year         = 2018,
+  doi          = {10.5281/zenodo.1207017},
+  url          = {https://doi.org/10.5281/zenodo.1207017}
+}
+@article{hunter2007matplotlib,
+  title = {{Matplotlib: A 2D graphics environment}},
+  author = {Hunter, John D.},
+  journal = {Computing In Science \& Engineering},
+  volume = {9},
+  number = {3},
+  pages = {90--95},
+  year = {2007},
+  publisher = {IEEE}
+}
+@article{sympy,
+  title = {SymPy: symbolic computing in Python},
+  author = {Meurer, Aaron and Smith, Christopher and Paprocki, Mateusz and
+  Čertík, Ondřej and Kirpichev, Sergey and Rocklin, Matthew and Kumar, AMiT and
+  Ivanov, Sergiu and Moore, Jason and Singh, Sartaj and Rathnayake, Thilina and
+  Vig, Sean and Granger, Brian and Muller, Richard and Bonazzi, Francesco and
+  Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and
+  Scopatz, Anthony},
+  year = 2017,
+  volume = 3,
+  journal = {PeerJ Computer Science},
+  issn = {2376-5992},
+  url = {https://doi.org/10.7717/peerj-cs.103},
+  doi = {10.7717/peerj-cs.103}
+}
+@article{walt2011numpy,
+  title = {{The NumPy array: a structure for efficient numerical computation}},
+  author = {Van Der Walt, Stefan and Colbert, S. Chris and Varoquaux, Gael},
+  journal = {Computing in Science \& Engineering},
+  volume = {13},
+  number = {2},
+  pages = {22--30},
+  year = {2011},
+  publisher = {IEEE}
+}
+@book{Anton2014,
+  added-at = {2016-05-31T10:53:16.000+0200},
+  author = {Anton, Howard and Rorres, Chris},
+  biburl = {https://www.bibsonomy.org/bibtex/23d125adef6e8701a7dce93bdc817f3bc/ytyoun},
+  edition = {Eleventh},
+  interhash = {661a46a89feed199e73bf45361ebae37},
+  intrahash = {3d125adef6e8701a7dce93bdc817f3bc},
+  isbn = {9781118434413 1118434412 9781118474228 1118474228},
+  keywords = {linear.algebra matrix textbook},
+  publisher = {Wiley},
+  refid = {856647689},
+  timestamp = {2016-05-31T13:03:34.000+0200},
+  title = {Elementary Linear Algebra: Applications Version},
+  year = 2014
+}
+@article{Matsui1992,
+title = "Best response dynamics and socially stable strategies",
+journal = "Journal of Economic Theory",
+volume = "57",
+number = "2",
+pages = "343 - 362",
+year = "1992",
+issn = "0022-0531",
+doi = "https://doi.org/10.1016/0022-0531(92)90040-O",
+url = "http://www.sciencedirect.com/science/article/pii/002205319290040O",
+author = "Matsui, Akihiko",
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@misc{glynatsi2019,
+  author       = {Glynatsi, Nikoleta E.},
+  title        = {{Raw data for: "Stability of defection,
+                   optimisation of strategies and the limits of
+                   memory in the Prisoner's Dilemma."}},
+  month        = sep,
+  year         = 2019,
+  doi          = {10.5281/zenodo.3402179},
+  url          = {https://doi.org/10.5281/zenodo.3402179}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%PRE PRINT%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Knight2019,
+  author    = {Knight, Vincent A. and
+               Harper, Marc and
+               Glynatsi, Nikoleta E. and
+               Gillard, Jonathan},
+  title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
+               Prisoner's Dilemma},
+  journal   = {CoRR},
+  volume    = {abs/1904.00973},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.00973},
+  archivePrefix = {arXiv},
+  eprint    = {1904.00973},
+  timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
