--- a/pnas/PNAS-template-main.tex
+++ b/pnas/PNAS-template-main.tex
@@ -549,7 +549,7 @@ discussed.
     \(\bar{a} = \input{denominator_constant}\).
 \end{theorem}
 
-
+Proof is given in (SI).
 
 \begin{theorem}\label{memone_group_best_response}
 
@@ -604,6 +604,8 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
 \end{align}}
 
 \end{theorem}
+
+Proof is given in (SI).
 
 \acknow{
 A variety of software libraries have been used in this work,
