add referene to source code

--- a/pnas/PNAS-template-main.tex
+++ b/pnas/PNAS-template-main.tex
@@ -336,7 +336,7 @@ randomly generated and the memory-one best responses against them is found.
 The source code used in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
-and can be found at.
+and can be found at~\cite{nikoleta_glynatsi_2019}.
 
 In order to investigate whether best responses
 behave in an extortionate matter the SSE method~\cite{Knight2019} is used.
