--- a/pnas/pnas-sample.bib
+++ b/pnas/pnas-sample.bib
@@ -452,3 +452,16 @@ author = "Matsui, Akihiko",
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@software{nikoleta_glynatsi_2019,
+  author       = {Nikoleta E. Glynatsi and
+                  Vince Knight},
+  title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
+                   initial release}},
+  month        = nov,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3533146},
+  url          = {https://doi.org/10.5281/zenodo.3533146}
+}
